[package]
name = "gbps"
description = "Rust implementation of gossip-based peer sampling"
version = "0.1.0"
authors = ["Pouriya Zarbafian"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pouriya-zarbafian/gbps.git"
keywords = ["distributed-systems", "gossip-protocol", "peer-sampling", "random-graph", "overlay-network"]
categories = ["algorithms"]
readme = "README.md"
exclude = [
    "assets/*",
    "v.gitignore",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
rand = "0.7.3"