[package]
name = "gbps"
description = "Rust implementation of gossip-based peer sampling"
version = "0.3.0-SNAPSHOT"
authors = ["Pouriya Zarbafian"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pouriya-zarbafian/gbps.git"
keywords = ["distributed-systems", "gossip-protocol", "peer-sampling", "random-graph", "overlay-network"]
categories = ["algorithms"]
readme = "README.md"
exclude = [
    "tests/*",
    "assets/*",
    ".gitignore",
    "README.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.4.0"